--- a/source/index.html
+++ b/source/index.html
@@ -5,211 +5,213 @@
   <title>Cat Energy</title>
 </head>
 <body class="page-body">
- <header class="main-header">
-   <div class="main-header__logo">
-     <img class="main-header__header-logo" src="img/header-logo.svg" width="34" height="38" alt="логотип cat energy">
-   </div>
-   <div class="main-header__caption">
-     <img class="main-header__header-caption" src="img/header-caption.svg" width="101" height="18">
-   </div>
-   <nav class="main-nav">
+<header class="main-header">
+  <div class="main-header__logo">
+    <img class="main-header__header-logo" src="img/header-logo.svg" width="34" height="38" alt="логотип cat energy">
+  </div>
+  <div class="main-header__caption">
+    <img class="main-header__header-caption" src="img/header-caption.svg" width="101" height="18">
+  </div>
+  <nav class="main-nav">
     <button class="main-nav__toggle" type="button">
-      <span class="visually-hidden">
-        Открыть меню
-      </span>
+        <span class="visually-hidden">
+          Открыть меню
+        </span>
     </button>
-     <div class="main-nav__wrapper">
-       <ul class="main-nav__list">
-         <li class="list__item">
-           <a href="#">
-             Главная
-           </a>
-         </li>
-         <li class="list__item">
-           <a href="#">
-             Каталог продукции
-           </a>
-         </li>
-         <li class="list__item">
-           <a href="#">
-             Подбор программы
-           </a>
-         </li>
-       </ul>
-     </div>
-   </nav>
- </header>
-   <main class="main-container">
-     <section class="lead" >
-       <h1 class="lead__caption">
-       Функциональное питание для котов
-     </h1>
-       <p class="lead__slogan">
-         занялся собой?займись котом!
-       </p>
-       <img class="lead__product-picture" src="img/product-picture.png" width="280" height="270" alt="упаковка корма">
-       <a class="lead__button button" href="#">
-         подобрать программу
-       </a>
-     </section>
-     <section class="programs">
-       <div class="programs__program program">
-         <img class="program__img-cat" src="img/program-cat.svg" width="50" height="53" alt="кот">
-         <div class="program__caption">
-           похудение
-         </div>
-         <p class="program__text">
-           Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-         </p>
-         <a class="program__link" href="#" >
-           каталог slim
-         </a>
-         <svg width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-           <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
-           <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
-         </svg>
-       </div>
-       <div class="programs__program program">
-         <img class="program__img-tiger" src="img/program-tiger.svg" width="67" height="50" alt="тигр">
-         <div class="program__caption">
-           похудение
-         </div>
-         <p class="program__text">
-           Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-         </p>
-         <a class="program__link" href="#" >
-           каталог slim
-         </a>
-         <svg width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-           <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
-           <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
-         </svg>
-       </div>
-     </section>
-     <section class="benefits">
-      <h2 class="benefits__caption section-caption">
-        Как это работает
-      </h2>
-       <ul class="benefits-list">
-         <li class="benefits-list__item item">
-           <div class="item__icon-color">
-             <img class="item__icon-sheet" src="img/icon-sheet.svg" width="26" height="28" alt="иконка лист">
-           </div>
-           <p class="item__desc">
-             Функциональное питание содержит только полезные питательные вещества.
-           </p>
-         </li>
-         <li class="benefits-list__item item">
-           <div class="item__icon-color">
-             <img class="item__icon-water" src="img/icon-water.svg" width="26" height="29" alt="иконка вода">
-           </div>
-           <p class="item__desc">
-             Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.
-           </p>
-         </li>
-         <li class="benefits-list__item item">
-           <div class="item__icon-color">
-             <img class="item__icon-eat" src="img/icon-eat.svg" width="25" height="30" alt="иконка еда">
-           </div>
-           <p class="item__desc">
-             Замените один-два приема обычной еды на&nbsp;наше функциональное питание.
-           </p>
-         </li>
-         <li class="benefits-list__item item">
-           <div class="item__icon-color">
-             <img class="item__icon-time" src="img/icon-time.svg" width="26" height="31"  alt="иконка часы">
-           </div>
-           <p class="item__desc">
-             Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!
-           </p>
-         </li>
-       </ul>
-     </section>
-     <section class="story">
-       <h2 class="story__caption">
-         Живой пример
-       </h2>
-       <p class="story__text">
-         Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.
-       </p>
-       <div class="story__result result">
-         <div class="result__item">
+    <div class="main-nav__wrapper">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a href="#">
+            Главная
+          </a>
+        </li>
+        <li class="main-nav__item">
+          <a href="#">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="list__item">
+          <a href="#">
+            Подбор программы
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<main class="main-container">
+  <section class="lead" >
+    <h1 class="lead__caption">
+      Функциональное питание для котов
+    </h1>
+    <p class="lead__slogan">
+      занялся собой?займись котом!
+    </p>
+    <img class="lead__product-picture" src="img/product-picture.png" width="280" height="270" alt="упаковка корма">
+    <a class="lead__button button" href="#">
+      подобрать программу
+    </a>
+  </section>
+  <section class="programs">
+       <span class="visually-hidden">
+         Программы
+       </span>
+    <div class="programs__program program">
+      <img class="program__img-cat" src="img/program-cat.svg" width="50" height="53" alt="кот">
+      <div class="program__caption">
+        Похудение
+      </div>
+      <p class="program__text">
+        Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+      </p>
+      <a class="program__link" href="#" >
+        каталог slim
+        <svg width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
+          <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
+        </svg>
+      </a>
+    </div>
+    <div class="programs__program program">
+      <img class="program__img-tiger" src="img/program-tiger.svg" width="67" height="50" alt="тигр">
+      <div class="program__caption">
+        Набор массы
+      </div>
+      <p class="program__text">
+        Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить по&nbsp;деревьям? Пора на&nbsp;диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+      </p>
+      <a class="program__link" href="#" >
+        каталог pro
+        <svg width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <line y1="6" x2="18" y2="6" stroke="black" stroke-width="2"/>
+          <path d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z" fill="black"/>
+        </svg>
+      </a>
+    </div>
+  </section>
+  <section class="benefits">
+    <h2 class="benefits__caption section-caption">
+      Как это работает
+    </h2>
+    <ul class="benefits-list">
+      <li class="benefits-list__item item">
+        <div class="item__icon-color">
+          <img class="item__icon" src="img/icon-sheet.svg" width="26" height="28" alt="иконка лист">
+        </div>
+        <p class="item__desc">
+          Функциональное питание содержит только полезные питательные вещества.
+        </p>
+      </li>
+      <li class="benefits-list__item item">
+        <div class="item__icon-color">
+          <img class="item__icon" src="img/icon-water.svg" width="26" height="29" alt="иконка вода">
+        </div>
+        <p class="item__desc">
+          Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком и&nbsp;готово.
+        </p>
+      </li>
+      <li class="benefits-list__item item">
+        <div class="item__icon-color">
+          <img class="item__icon" src="img/icon-eat.svg" width="25" height="30" alt="иконка еда">
+        </div>
+        <p class="item__desc">
+          Замените один-два приема обычной еды на&nbsp;наше функциональное питание.
+        </p>
+      </li>
+      <li class="benefits-list__item item">
+        <div class="item__icon-color">
+          <img class="item__icon" src="img/icon-time.svg" width="26" height="31"  alt="иконка часы">
+        </div>
+        <p class="item__desc">
+          Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!
+        </p>
+      </li>
+    </ul>
+  </section>
+  <section class="story">
+    <h2 class="story__caption">
+      Живой пример
+    </h2>
+    <p class="story__text">
+      Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.
+    </p>
+    <div class="story__result result">
+      <div class="result__item">
            <span class="result__weight"> 5 кг
            </span>
-           <span class="result__desc">
+        <span class="result__desc">
              снижение веса
            </span>
-         </div>
-         <div class="result__item">
+      </div>
+      <div class="result__item">
            <span class="result__time"> 60 дней
            </span>
-           <span class="result__desc">
+        <span class="result__desc">
              затрачено времени
            </span>
-         </div>
-       </div>
-       <p class="story__caption-cost">
-         Затраты на питание: 15 000 РУБ.
-       </p>
-       <div class="result-slider">
-         <div class="slider-slide__fat">
-           <img class="fat-cat" src="img/fat-cat.png" width="280" height="256" alt="толстый кот">
-         </div>
-         <div class="result-slider__arrows">
-           стрелки
-         </div>
-         <div class="slider-slide__slim">
-           <img class="slim-cat" src="img/slim-cat.png" width="280" height="256" alt="худой кот">
-         </div>
-       </div>
-     </section>
-     <section class="cta">
-       <div class="cta__caption">
-         приглашаем к&nbsp;сотрудничеству дилеров!
-       </div>
-       <div class="cta__text">
-         ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-       </div>
-       <div class="cta__map">
-         <img class="cta__map-mark" src="img/map-mark.jpg" width="320" height="362" alt="карта с адресом">
-       </div>
-     </section>
-  </main>
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <div class="main-footer__footer-caption">
-        <img class="main-footer___footer-caption" src="">
-        <!--вот тут наверно картинка как-то связана с хедером-->
-      </div>
-      <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link" href="#" >
-              <img class="social__link--vk" src="img/vk.svg">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">
-              <img class="social-link--youtube" src="img/youtube.svg">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link" href="#">
-              <img class="social__link--tg" src="img/tg.svg">
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer--copyright copyright">
-        <a class="copyright__link" href="#">
-          HTML Academy
-        </a>
-      </div>
-      <div class="main-footer--copyright-logo copyright-logo">
-        <img class="copyright-logo__logo-img" src="img/logo-img.svg" width="27" height="34">
       </div>
     </div>
-  </footer>
-
+    <p class="story__caption-cost">
+      Затраты на питание: 15 000 РУБ.
+    </p>
+    <div class="result-slider">
+      <div class="result-slider__fat">
+        <img class="fat-cat" src="img/fat-cat.png" width="280" height="256" alt="толстый кот">
+      </div>
+      <div class="result-slider__arrows">
+        стрелки
+      </div>
+      <div class="result-slider__slim">
+        <img class="slim-cat" src="img/slim-cat.png" width="280" height="256" alt="худой кот">
+      </div>
+    </div>
+  </section>
+  <section class="cta">
+    <div class="cta__caption">
+      приглашаем к&nbsp;сотрудничеству дилеров!
+    </div>
+    <div class="cta__text">
+      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+    </div>
+    <div class="cta__map">
+      <img class="cta__map-mark" src="img/map-mark.jpg" width="320" height="362" alt="карта с адресом">
+    </div>
+  </section>
+</main>
+<footer class="main-footer">
+  <div class="main-footer__wrapper">
+    <div class="main-footer__footer-caption">
+      <img class="main-footer___footer-caption" src="">
+      <!--вот тут наверно картинка как-то связана с хедером-->
+    </div>
+    <div class="main-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link" href="#" >
+            <img class="social__link-img" src="img/vk.svg">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <img class="social__link-img" src="img/youtube.svg">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <img class="social__link-img" src="img/tg.svg">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="main-footer__copyright copyright">
+      <a class="copyright__link" href="#">
+        HTML Academy
+      </a>
+    </div>
+    <div class="main-footer__copyright-logo copyright-logo">
+      <img class="copyright-logo__logo-img" src="img/logo-img.svg" width="27" height="34">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
