поправляет ошибки на главной линтер

--- a/source/index.html
+++ b/source/index.html
@@ -137,18 +137,20 @@
     </p>
     <div class="story__result result">
       <div class="result__item">
-           <span class="result__weight"> 5 кг
-           </span>
+        <span class="result__weight">
+          5 кг
+        </span>
         <span class="result__desc">
-             снижение веса
-           </span>
+          снижение веса
+        </span>
       </div>
       <div class="result__item">
-           <span class="result__time"> 60 дней
-           </span>
+        <span class="result__time">
+          60 дней
+        </span>
         <span class="result__desc">
-             затрачено времени
-           </span>
+          затрачено времени
+        </span>
       </div>
     </div>
     <p class="story__caption-cost">
@@ -187,7 +189,7 @@
     <div class="main-footer__social social">
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link" href="#" >
+          <a class="social__link" href="#">
             <img class="social__link-img" src="img/vk.svg">
           </a>
         </li>
